# Sherlock

./: .clang-format  .gitignore  CMakeLists.txt  package-lock.cmake
01_vector_addition/: CMakeLists.txt
01_vector_addition/src/: vecadd.cu
